docs/styles/style.css
@charset "UTF-8";
@import "reset.css";
@import "typography.css";
@import "color.css";
@import "forms.css";

body {
  text-align: center;
  background: var(--color-background);
  font-family: var(--font-stack);
}

::selection {
  background-color:var(--color-caution);
}

header {
  padding: 32px;
}

header nav {
  padding-top: 12px;
  position: absolute;
  top:32px;
  right:40px;
}

header nav a {
  margin-right:24px;
}

header nav a:last-child {
  margin-right: 0;
}

a {
  color:var(--color-foreground-level-4);
  text-decoration: none;
}

a span {
  text-decoration: underline;
}

a#logo {
  text-decoration: none;
}

#subtitle {
  padding: 32px 0 48px 0;
}

#get-the-app {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-bottom: 2px solid var(--color-foreground-level-3)
}

#get-the-app #email-signup {
  max-width: 90vw;
}

#get-the-app img {
  margin-top: 48px;
  max-width: 90%;
  border:2px solid var(--color-foreground-level-3);
  border-bottom:0;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  box-shadow: 0 -16px 32px rgba(0,0,0,.15);
}

#get-the-app p, #get-the-app form {
  display: inline-block;
  margin: 0 0 16px 8px;
}

img#main-illustration {
  width: 90vw;
  margin: 0 auto;
  border-radius: 8px;
}

#value-prop, #tech, #dogfooding, #footer {
  padding: 88px 0;
  display: grid;
  grid-template-rows: 48px 32px auto;
  grid-row-gap: 24px;
}

#value-prop .container, #dogfooding .container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 32px;
  max-width: 90vw;
  margin: 32px auto 54px auto;
}

.value-prop-item {
  border: 2px solid var(--color-foreground-level-1);
  border-radius: 8px;
  padding: 48px;
  display: grid;
  grid-template-rows: 48px 24px auto;
  grid-row-gap: 24px;
}

.value-prop-item svg {
  margin: 0 auto;
}

#get-app {
  display: flex;
  justify-content: center;
  align-items: center;
}

#tech {
  background-color: var(--color-foreground-level-1);
}

#tech .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 32px;
  max-width: 90vw;
  margin: 32px auto 54px auto;
}

.tech-item {
  background-color: var(--color-background);
  border-radius: 8px;
  padding: 48px;
  display: grid;
  grid-template-rows: 48px 24px auto 24px;
  grid-row-gap: 24px;
}

.tech-item svg {
  margin: 0 auto;
}

#email-signup form button {
  margin-left: 8px;
}

#tech button  {
  justify-self: center;
}

#dogfooding {
  margin: 0 auto;
}

#dogfooding p {
  max-width: 50vw;
  margin: 0 auto;
}

#dogfooding svg {
  margin: 0 auto;
}

#dogfooding .value-prop-item h5 {
  color: var(--color-foreground-level-4);
}

/* MOBILE STYLES

I wanted to put these in a mobile.css file and @import it at the top, but
then all the styles overwrite. mobile.css would need to be imported at the
end, but I couldn't get that to work. So the mobile styles are living here
for now. Plz help.
*/

  /* MOBILE */
  @media only screen and (max-width: 480px) {
    
    #get-the-app p, #get-the-app form {
      margin:0;
    }

    #email-signup input[type=text],
    #email-signup form button,
    #email-signup p {
      width:80vw;
      margin-left:0;
    }

    #email-signup form button,
    #email-signup p {
      margin-bottom: 16px;
    }

    #email-signup input[type=text] {
      margin-bottom: 8px;
    }

    a#logo {
      width:300px;
    }

    h1.xl {
      font-size:9.5vw;
      line-height: 9.5vw;
    }

    #value-prop .container {
      margin-bottom: 0;
    }

    .value-prop-item, .tech-item {
      padding:48px 24px;
    }
  
  }

  /* TABLET */
  @media only screen and (max-width: 960px) {

    #value-prop .container, #tech .container, #dogfooding .container {
      grid-template-columns: 1fr;
    }

    .value-prop-item, .tech-item {
      margin-bottom: 32px;
    }

    #value-prop, #tech, #dogfooding {
      padding-right: 5vw;
      padding-left: 5vw;
    }

    #dogfooding p {
      max-width: 90vw;
    }

    header {
      padding-bottom:0;
    }

    header nav {
      padding-top: 16px;
      position: static;
      top: unset;
      right:unset;
    }

  }
  

